// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should set the capacity 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": 20,
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the created flag 1`] = `
Object {
  "created": true,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the description 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "new description",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the end date 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "January 1, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the end date object 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-01-01T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the end time 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "13:45",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 10,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": true,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the header image state 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "test-alt",
    "id": 42,
    "src": "test-src",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the id 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 42,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": true,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is settings loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": true,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 10,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going responses 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": true,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": true,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the start date 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "January 1, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the start date object 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-01-01T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the start time 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "13:45",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp capacity 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": 20,
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp description 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "new description",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp end date 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "January 1, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp end date object 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": 2018-01-01T00:00:00.000Z,
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp end time 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "13:45",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp not going responses 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": true,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp start date 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "January 1, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp start date object 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-01-01T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp start time 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "13:45",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the temp title 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "new title",
  },
}
`;

exports[`RSVP block reducer should set the title 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "new title",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "July 19, 2018",
    "endDateObj": 2018-07-19T00:00:00.000Z,
    "endTime": "19:30",
    "notGoingResponses": false,
    "startDate": "July 19, 2018",
    "startDateObj": 2018-07-19T00:00:00.000Z,
    "startTime": "19:30",
    "title": "",
  },
}
`;
